# ocr-mcp

./: .gitignore  AGENT_DEVELOPER_NOTE.md  CHANGES.md  CONVERSION_GUIDE.md  DATABASE_STORAGE_IMPLEMENTATION.md  EMAIL_SYSTEM_DOCUMENTATION.md  IMAGE_CONVERSION_SUMMARY.md  QUICK_START_CONVERSIONS.md  README.md  STRUCTURED_OUTPUTS_GUIDE.md  TYPE_FIXES_SUMMARY.md  edmcp.db  fastmcp.json  main.py  pyproject.toml  server.py  test-config.json  test_email_workflow.py  test_server.py  verify_db_pipeline.py  verify_end_to_end.py  verify_evaluation.py  verify_normalization.py  verify_schema_eval.py  verify_scrubber_loading.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
data/test_backups/: job_20251228_074051_6c57313b.jsonl  job_20251228_074138_790003bb.jsonl  job_20251228_075247_622f5838.jsonl
data/test_input/: frost_bite_facts.txt
data/test_vector_store/: chroma.sqlite3
data/test_vector_store_ocr/: chroma.sqlite3
data/vector_store/: chroma.sqlite3
edmcp/core/: db.py  email_sender.py  job_manager.py  jsonl_utils.py  knowledge.py  name_loader.py  prompts.py  report_generator.py  student_roster.py  utils.py
edmcp/data/email_templates/: README.md  (+2 more)
edmcp/tools/: archive.py  cleanup.py  converter.py  emailer.py  name_fixer.py  ocr.py  scrubber.py
tests/: test_cleanup_tool.py  test_evaluation_tool.py  test_scrubber_integration.py  test_scrubber_job.py
tests/core/: test_db.py  test_db_schema_update.py  test_job_manager.py  test_jsonl_utils.py  test_name_loader.py  test_utils.py
tests/tools/: test_converter.py  test_ocr.py  test_scrubber.py
(+26 files in other folders)
