[project]
name = "edmcp"
version = "0.1.0"
description = "OCR-MCP Server - FastMCP server for document OCR processing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "pdf2image>=1.2.0",
    "regex>=2023.0",
    "openai>=1.0.0",
    "python-dotenv>=1.2.1",
    "llama-index>=0.10.0",
    "llama-index-embeddings-huggingface>=0.2.0",
    "sentence-transformers>=2.2.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "chromadb>=0.4.0",
    "llama-index-llms-openai-like>=0.2.0",
    "reportlab>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
